spacing fixes

--- a/css/converter.css
+++ b/css/converter.css
@@ -1,23 +1,3 @@
-.remove-icon {
-    cursor: pointer;
-    margin-right: 5px;
-}
-
-.loading-spinner {
-    border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 1s linear infinite;
-    margin: 10px auto;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-
 #logContainer {
     max-height: 200px;
     overflow-y: auto;
@@ -39,4 +19,20 @@
 
 #fileListContainer li:hover {
     color: red;
+}
+
+#conversionList {
+    margin-top: 1em;
+}
+
+ul li {
+    margin-left: -2.4em;
+}
+
+#uploadButton {
+    margin-top: 1em;
+}
+
+#progressContainer {
+    margin-top: 1em;
 }
